<resources>
    <string name="app_name">Toon</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_appSettings_category_title">App settings</string>
    <string name="pref_appSettings_tempSetValue_title">Default temp change setting</string>
    <string name="pref_appSettings_tempSetValue_summary">Value at which the temperature is changed in the app</string>
    <string name="pref_appSettings_nextProgramTempOrProgram_title">Use temperature or program</string>
    <string name="pref_appSettings_nextProgramTempOrProgram_summary">Show for next program the temperature or the mode</string>
    <string name="pref_appSettings_refresh_useAutoRefresh_title">Auto refresh</string>
    <string name="pref_appSettings_refresh_useAutoRefresh_summary">Automatically refresh data while the app is in use</string>
    <string name="pref_appSettings_refresh_autoRefreshPeriod_title">Set the auto refresh interval</string>
    <string name="pref_appSettings_notification_vibrate_title">Vibrate</string>
    <string name="pref_appSettings_notification_vibrate_summary">Vibrate on notifications?</string>
    <string name="pref_appSettings_notification_vibrateExtraOnSmoke_title">Vibrate extra on smoke alert</string>
    <string name="pref_appSettings_notification_vibrateExtraOnSmoke_summary">Should your phone vibrate extra long on smoke alerts?</string>
    <string name="pref_meterSettings_category_title">Meter settings</string>
    <string name="pref_meterSettings_doubleTariff_title">Double tariff</string>
    <string name="pref_meterSettings_doubleTariff_summary">Meter is a double tariff meter</string>
    <string name="pref_meterSettings_gasMeter_title">Gas meter</string>
    <string name="pref_meterSettings_gasMeter_summary">Disable this checkbox if your meter doesn\'t have gas values reported</string>
    <string name="pref_meterSettings_PowerProduction_title">Power production</string>
    <string name="pref_meterSettings_PowerProduction_summary">Enable this checkbox if Toon can measure power production</string>
    <string name="pref_network_category_title">Network settings</string>
    <string name="pref_network_setupConnection_title">Set up connection</string>
    <string name="pref_network_setupConnection_summary">Click here to set up the connection to Toon</string>
    <string name="pref_network_firebaseCloudMessagingId_title">Firebase Cloud messaging ID</string>
    <string name="pref_network_firebaseCloudMessagingId_summary">After adding this ID to your Toon you can receive notifications from your Toon from anywhere in the world!</string>
    <string name="pref_advanced_category_title">Advanced settings</string>
    <string name="pref_advanced_category_summary">Click here for advanced settings</string>
    <string name="pref_advanced_httpHeader_category_title">Use custom HTTP header</string>
    <string name="pref_advanced_httpHeader_category_summary">Use a custom HTTP header key/value to enhance the security a bit when connecting from internet</string>
    <string name="pref_advanced_httpHeader_value_title">HTTP header value</string>
    <string name="pref_advanced_httpHeader_value_summary">Enter the HTTP header value</string>
    <string name="pref_advanced_httpHeader_value_default" translatable="false" />
    <string name="pref_advanced_httpHeader_key_title">HTTP header key</string>
    <string name="pref_advanced_httpHeader_key_summary">Enter the HTTP header key</string>
    <string name="pref_advanced_httpHeader_key_default" translatable="false">apikey</string>
    <string name="pref_appInfo_category_title">App info</string>
    <string name="pref_appInfo_appVersion_title">App version</string>
    <string name="pref_appInfo_appLibraries_title">Libraries used</string>
    <string name="pref_appInfo_appLibraries_summary">Information on the open source libraries used by this app</string>
    <string name="pref_appInfo_troubleshooting_title">Troubleshooting</string>
    <string name="pref_appInfo_troubleshooting_message">Get some debug information your connection to Toon</string>
    <string name="temperature_setting_away">Away</string>
    <string name="temperature_setting_home">Home</string>
    <string name="temperature_setting_sleeping">Sleep</string>
    <string name="temperature_setting_comfort">Comfort</string>
    <string name="temperature_setting_vacation">Vacation</string>
    <string name="controls_card_powerUsage_title">Power usage</string>
    <string name="controls_card_gasUsage_gasUsage_title">Gas usage</string>
    <string name="controls_card_powerUsage_img_current_power">Image current power usage</string>
    <string name="controls_card_GasUsage_img_current_gas">Image current gas usage</string>
    <string name="controls_power_production">Power production</string>
    <string name="controls_power_return">Power return</string>
    <string name="controls_nextProgramText_noData">No data</string>
    <string name="controls_nextProgramValue">At %s on %s (%.01f°)</string>
    <string name="controls_fire_description_img">Image fire</string>
    <string name="controls_card_gasUsage_gasValue" translatable="false">0.0 liter</string>
    <string name="controls_card_powerUsage_powerValue" translatable="false">0.0 watt</string>
    <string name="controls_temperature_setting_sign_min" translatable="false">-</string>
    <string name="controls_temperature_setting_sign_plus" translatable="false">+</string>
    <string name="controls_gas_used_today">Gas used today</string>
    <string name="controls_power_used_today">Power used today</string>
    <string name="controls_txtvTotalPowerUseValue">%.2f kWh</string>
    <string name="controls_txtvTotalGasUseValue">%.2f m3</string>
    <string name="controls_message_errorOtCommError">There is an OpenTherm communication error: %d</string>
    <string name="controls_nextProgram_onProgramText">Program off (Set on %.01f°)</string>
    <string name="connectionWizard_login_msg_loginSuccessful">Login successful</string>
    <string name="connectionWizard_login_msg_loading_title">Please wait</string>
    <string name="connectionWizard_login_msg_loading_text">Please wait while connecting to your Toon thermostat</string>
    <string name="connectionWizard_login_toonAddress_title">Toon address</string>
    <string name="connectionWizard_login_toonPort_title">Toon port</string>
    <string name="connectionWizard_login_buttonLogin_loginText">Login</string>
    <string name="connectionWizard_login_buttonLogin_retryText">Retry</string>
    <string name="connectionWizard_login_error_pleaseEnterAddress">Please enter a value</string>
    <string name="connectionWizard_login_error_noValidInput">Not a valid input</string>
    <string name="connectionWizard_login_error_pleaseEnterNumber">Please enter a number</string>
    <string name="connectionWizard_login_error_enterValidNumber">Enter a valid number</string>
    <string name="connectionWizard_login_error_pleaseOnlyUseNumbers">Please only use numbers</string>
    <string name="connectionWizard_intro_title">Toon app</string>
    <string name="connectionWizard_login_protocol_http">HTTP</string>
    <string name="connectionWizard_login_protocol_https">HTTPS</string>
    <string name="connectionWizard_intro_text">Unofficial Toon app to connect to your (rooted) Toon.</string>
    <string name="connectionWizard_intro_text2">You can use the app to connect to your Toon thermostat when you don\'t have an subscription with Eneco.</string>
    <string name="connectionWizard_intro_text3">Or just because you love our app!</string>
    <string name="connectionWizard_login_toonAddress_hint" translatable="false">192.168.0.10</string>
    <string name="connectionWizard_login_toonPort_hint" translatable="false">80</string>
    <string name="connectionWizard_login_protocol">Protocol</string>
    <string name="connectionWizard_login_httpHeaderKey">HTTP header key</string>
    <string name="connectionWizard_login_apikey_hint">apikey</string>
    <string name="connectionWizard_login_httpHeaderValue">HTTP header value</string>
    <string name="connectionWizard_login_httpHeaderValue_hint">mysecretvalue</string>
    <string name="connectionWizard_login_advancedSettings">Advanced settings</string>
    <string name="exception_message_temperature_update_error_txt">Error while updating temperature info</string>
    <string name="exception_message_device_update_error_txt">Error while updating device info</string>
    <string name="exception_message_hostUnknown">Host unknown</string>
    <string name="exception_message_timeout">Timeout connecting to host</string>
    <string name="exception_message_noNetwork">No network connection available</string>
    <string name="exception_message_incorrectHostname">Hostname not correct</string>
    <string name="exception_message_unhandled">Unhandled exception</string>
    <string name="exception_message_notAuthorized">Not authorized</string>
    <string name="exception_message_pageNotFound">Page not found on device</string>
    <string name="exception_message_connectionRefused">Connection refused by your Toon. Are you sure it is rooted?</string>
    <string name="exception_message_unsupported">Toon did not support the request</string>
    <string name="exception_message_getDevicesError">Unable to get device info from toon</string>
    <string name="graph_timeSpan_firstToggle">6 hour</string>
    <string name="graph_timeSpan_secondToggle">12 hour</string>
    <string name="graph_timeSpan_thirdToggle">1 day</string>
    <string name="graph_elec_usage_used">On %s you used %.0fWatt</string>
    <string name="graph_gas_usage_used">On %s you used %.0fm3</string>
    <string name="graph_message_updatingData">Updating data</string>
    <string name="graph_message_error_updatingGraphData_txt">Error while updating data:</string>
    <string name="graph_label_electricity">Electricity usage</string>
    <string name="graph_flow_elecUsage_clickForMoreInfo">Click on a dot for more info</string>
    <string name="graph_usage_fragment_elecUsage">Electricity usage</string>
    <string name="graph_usage_fragment_gasUsage">Gas usage</string>
    <string name="graph_usage_fragment_thirdFragment">Third Fragment</string>
    <string name="graph_gasUsage_formatted">%.00f liter</string>
    <string name="graph_powerUsage_formatted">%.00f watt</string>
    <string name="graph_temp_formatted">%.01f°</string>
    <string name="drawerMenu_fragment_controls">Thermostat</string>
    <string name="drawerMenu_appVersion">Version %s</string>
    <string name="drawerMenu_openSource">Open Source</string>
    <string name="ot_error_thermostat_title">Thermostat error</string>
    <string name="ot_error_thermostat_message">Your thermostat is in a error state (error code %1$d)</string>
    <string name="ot_error_com_title">Opentherm communication error</string>
    <string name="ot_error_com_message">Your thermostat has an communication error with your boiler (error code %1$d)</string>
    <string name="debug_progressDialog_message">Please wait while getting the data from your Toon</string>
    <string name="debug_response_error_message">There was an error while connecting to your Toon</string>
    <string name="debug_explanation_message1">Use the buttons below to get the raw information from your Toon.</string>
    <string name="debug_explanation_message2">You can post this information on below forum to help troubleshoot the issue.</string>
    <string name="debug_explanation_message3" translatable="false">https://www.domoticaforum.eu/viewtopic.php?f=102&amp;t=12402</string>
    <string name="debug_clipboard_label">Toon raw data</string>
    <string name="debug_toast_rawDataCopiedToClipboard">Raw data copied to your clipboard</string>
    <string name="debug_button_zwave">Z-wave</string>
    <string name="debug_button_thermostat">Therm</string>
    <string name="debug_button_usage">Usage</string>
    <string name="debug_switch_format">Format</string>
</resources>