<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020
  ~ Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements
  ~ See the NOTICE file distributed with this work for additional information regarding copyright ownership
  ~ The ASF licenses this file to you under the Apache License, Version 2.0 (the  "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing software distributed under the License is
  ~ distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
  ~ express or implied.  See the License for the specific language governing permissions and limitations
  ~ under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="pref_key_network_advanced"
        android:title="@string/pref_advanced_category_title" >

        <CheckBoxPreference
            android:key="pref_key_use_redirection_service"
            android:title="@string/pref_advanced_httpHeader_category_title"
            android:summary="@string/pref_advanced_httpHeader_category_summary" />

        <EditTextPreference
            android:key="pref_key_httpHeaderKey"
            android:defaultValue="@string/pref_advanced_httpHeader_value_default"
            android:dependency="pref_key_use_redirection_service"
            android:title="@string/pref_advanced_httpHeader_key_title"
            android:summary="@string/pref_advanced_httpHeader_key_summary"
            />

        <EditTextPreference
            android:key="pref_key_token"
            android:defaultValue="@string/pref_advanced_httpHeader_value_default"
            android:dependency="pref_key_use_redirection_service"
            android:title="@string/pref_advanced_httpHeader_value_title"
            android:summary="@string/pref_advanced_httpHeader_value_summary"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_appInfo_category_title"
        android:key="key_pref_appInfo_category">
        <Preference
            app:key="key_pref_appInfo_troubleshooting"
            app:title="@string/pref_appInfo_troubleshooting_title"
            app:summary="@string/pref_appInfo_troubleshooting_message"
            app:fragment="com.toonapps.toon.view.fragments.settings.TroubleshootingFragment"/>
        <Preference
            android:key="key_pref_appInfo_appVersion"
            android:title="@string/pref_appInfo_appVersion_title"
            android:summary="2.3.4"/>
        <Preference
            android:key="key_pref_appInfo_appLibraries"
            android:title="@string/pref_appInfo_appLibraries_title"
            android:summary="@string/pref_appInfo_appLibraries_summary"/>
    </PreferenceCategory>
</PreferenceScreen>