<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020
  ~ Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements
  ~ See the NOTICE file distributed with this work for additional information regarding copyright ownership
  ~ The ASF licenses this file to you under the Apache License, Version 2.0 (the  "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing software distributed under the License is
  ~ distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
  ~ express or implied.  See the License for the specific language governing permissions and limitations
  ~ under the License.
  -->

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_controls"
            android:icon="@drawable/ic_usage_black"
            android:title="@string/drawerMenu_fragment_controls" />

        <item
            android:id="@+id/menu_elecUsage"
            android:icon="@drawable/ic_usage_black"
            android:title="@string/graph_usage_fragment_elecUsage" />

        <!--
            Disable since there is no way to get the gas data anymore from Toon
            <item
                android:id="@+id/menu_gasUsage"
                android:icon="@drawable/ic_usage_black"
                android:title="@string/graph_usage_fragment_gasUsage" />
        -->
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_openSource"
            android:icon="@drawable/ic_info"
            android:title="@string/drawerMenu_openSource" />
        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/ic_info"
            android:title="Version 1.1.1"
            tools:ignore="HardcodedText" />
    </group>

</menu>